job history list template not showing rectified

--- a/hr/templates/hr/employee/jhistory_list.html
+++ b/hr/templates/hr/employee/jhistory_list.html
@@ -2,7 +2,7 @@
 {% load static %} 
 
 {% block content %} 
-    {% if job_list %}
+    {% if job_history_list %}
     <div class="row">
         <div class="col-md-12">
             <div class="card">
