--- a/hr/templates/hr/employee/jhistory_list.html
+++ b/hr/templates/hr/employee/jhistory_list.html
@@ -8,9 +8,9 @@
             <div class="card">
                 <div class="card-body">
 
-                   <a href="{% url 'job-add' %}">
+                   <a href="{% url 'job-history-add' %}">
                     <button type="button" class="btn btn-info rounded-pill waves-effect waves-light">
-                        <span class="btn-label"><i class="mdi mdi-plus-circle"></i></span>New Job
+                        <span class="btn-label"><i class="mdi mdi-plus-circle"></i></span>New History
                     </button>
                    </a>
 
@@ -19,7 +19,7 @@
                           <tr>
                               <th>#</th>
                               <th>Employee</th>
-                              <th>Job</th>
+                              <th>Job Title</th>
                               <th>Department</th>
                               <th>Start Date</th>
                               <th>End Date</th>
