--- a/hr/templates/hr/employee/job_form.html
+++ b/hr/templates/hr/employee/job_form.html
@@ -12,15 +12,15 @@
             <div class="card-body">
                 <form action="" method="POST" id="save-form" novalidate>
                     {% csrf_token %}
-                    {{ form|crispy }}
-                    
+                    {{ form|crispy }}        
+
                     <p class="mt-2">
                         <a href="{% url 'job-list' %}">
-                         <button type="button" id="cancel-btn" class="btn btn-md btn-outline-danger rounded-pill">Cancel</button>     
+                            <button type="button" class="btn btn-danger rounded-pill waves-effect waves-light m-1"><i class="fe-x me-1"></i> Cancel</button>               
                         </a>
-                        <button type="submit" id="save-btn" class="btn btn-md btn-outline-dark rounded-pill">Save Record</button>     
+                        <button type="submit" class="btn btn-success rounded-pill waves-effect waves-light m-1"><i class="fe-check-circle me-1"></i> Save Record</button>
+                    </p>     
 
-                    </p>
                 </form>
             </div>
         </div>
