--- a/hr/templates/hr/employee/photo_form.html
+++ b/hr/templates/hr/employee/photo_form.html
@@ -41,10 +41,11 @@
 
                     <p class="mt-2">
                         <a href="{% url 'employee-list' %}">
-                            <button type="button" id="cancel-btn" class="btn btn-md btn-outline-danger rounded-pill">Cancel</button>
+                            <button type="button" class="btn btn-danger rounded-pill waves-effect waves-light m-1"><i class="fe-x me-1"></i> Cancel</button>               
                         </a>
-                        <button type="submit" id="save-btn" class="btn btn-md btn-outline-dark rounded-pill">Save Record</button>
-                    </p>
+                        <button type="submit" class="btn btn-success rounded-pill waves-effect waves-light m-1"><i class="fe-check-circle me-1"></i> Save Record</button>
+                    </p>     
+
                 </form>
             </div>
         </div>
