--- a/hr/templates/hr/payroll/salarygrade_list.html
+++ b/hr/templates/hr/payroll/salarygrade_list.html
@@ -1,20 +1,28 @@
 {% extends 'core/base.html' %} 
 {% load static %} 
 
+{% block styles %}
+<link rel="stylesheet" href="{% static 'plugin/libs/datatables.net/css/jquery.dataTables.min.css' %} ">
+{% endblock %}
+
+{% block scripts %}
+<script src="{% static 'plugin/libs/datatables.net/js/jquery.dataTables.min.js' %}"></script>
+{% endblock %}
+
 {% block content %} 
-    {% if salarygrade_list %}
     <div class="row">
         <div class="col-md-12">
             <div class="card">
                 <div class="card-body">
-
+                   <p>
                     <a href="{% url 'salarygrade-add' %}">
                         <button type="button" class="btn btn-info rounded-pill waves-effect waves-light">
                             <span class="btn-label"><i class="mdi mdi-plus-circle"></i></span>New Grade
                         </button>
                        </a>
+                    </p>
 
-                    <table class="table table-hover">
+                    <table id="Table" class="table table-hover dt-responsive nowrap w-100">
                         <thead>
                           <tr>
                               <th>#</th>
@@ -25,33 +33,52 @@
                               <th>Actions</th>
                           </tr>
                         </thead>
-                        <tbody>
-                          {% for sg in salarygrade_list %}
-                           <tr>
-                              <td>{{ forloop.counter }}</td>
-                              <td>{{ sg.grade }}</td>
-                              <td>{{ sg.step }}</td>
-                              <td>{{ sg.get_currency_symbol }}{{ sg.amount|default:'-' }}</td>
-                              <td>{{sg.created_at|date:'d M, Y'}}</td>
-                              <td>
-
-                                    <a href="{% url 'salarygrade-update' sg.pk %}" title="Edit salary grade"><button class="btn btn-xs btn-outline-warning rounded-pill waves-effect waves-light"><i class="fe-edit"></i></button></a>
-
-                                    <a href="{% url 'salarygrade-delete' sg.pk %}" title="Delete salary grade"><button class="btn btn-xs btn-outline-danger rounded-pill waves-effect waves-light"><i class="fe-trash-2"></i></button></a>
-                                  
-                            </td>
-
-                            </tr>
-                          {% endfor %}
-                        </tbody>
                       </table>
                 </div>
             </div>
         </div>
     </div>
-    {% else %}
-        <div class="alert alert-info" role="alert">
-            <center><i class="mdi mdi-alert-circle-outline me-2"></i> Sorry, it appears there are no salary grades in the system.  <a href="{% url 'salarygrade-add' %}" class="alert-link">Create </a> one by clicking on the link.</center>
-        </div>
-    {% endif %} 
+{% endblock %}
+
+{% block javascript %}
+<script>
+    $(document).ready(function() {
+
+        $('#Table').DataTable({
+            "processing": true,
+            "serverSide": true,
+            "ajax": {
+                "url": "{% url 'salarygrade-list-api' %}",
+                "type": "GET"
+            },
+            "columns": [
+                { 
+                    "data": null, // Automatically calculate the row number
+                    "orderable": false,
+                    "searchable": false,
+                    "render": function (data, type, row, meta) {
+                        return meta.row + 1; // Serial number, starts from 1
+                    }
+                },
+                {"data":"grade"},
+                { "data": "step" },
+                { "data": "amount" },
+                { "data": "created_at" },
+                { "data": 'id', "orderable": false, "render": function(data, type, row) {
+                 const id = row.id
+
+                 const updateURL = `{% url 'salarygrade-update' 0 %}`.replace('0', id)
+                 const deleteURL = `{% url 'salarygrade-delete' 0 %}`.replace('0', id)
+
+                    return `
+                           <a href="${updateURL}" title="Edit salary grade"><button class="btn btn-xs btn-outline-warning rounded-pill waves-effect waves-light"><i class="fe-edit"></i></button></a>
+                           <a href="${deleteURL}" title="Delete salary grade"><button class="btn btn-xs btn-outline-danger rounded-pill waves-effect waves-light"><i class="fe-trash-2"></i></button></a>`;                 
+    
+                }},
+            ],
+            "order": [[4, "desc"]]  // Default sorting by "created_at"
+        });
+
+    });
+</script>
 {% endblock %}
