--- a/hr/templates/hr/employee/employee_form.html
+++ b/hr/templates/hr/employee/employee_form.html
@@ -4,6 +4,8 @@
 {% block styles %}
 <link href="{% static 'plugin/libs/select2/css/select2.min.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'plugin/libs/flatpickr/flatpickr.min.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'css/select2.css' %}" rel="stylesheet" type="text/css" />
+
 {% endblock %}
 
 {% block scripts %}
