--- a/hr/templates/hr/leave/leave_type_form.html
+++ b/hr/templates/hr/leave/leave_type_form.html
@@ -1,20 +1,6 @@
 {% extends 'core/base.html' %}
 {% load static %}
 
-{% block styles %}
-<link href="{% static 'plugin/libs/select2/css/select2.min.css' %}" rel="stylesheet" type="text/css" />
-<link href="{% static 'plugin/libs/flatpickr/flatpickr.min.css' %} rel="stylesheet" type="text/css" />
-<link href="{% static 'css/select2.css' %}" rel="stylesheet" type="text/css" />
-
-{% endblock %}
-
-{% block scripts %}
-<script src="{% static 'plugin/libs/select2/js/select2.min.js' %}"></script>
-<script src="{% static 'plugin/libs/sweetalert2/sweetalert2.min2.js' %}"></script>
-<script src="{% static 'plugin/libs/flatpickr/flatpickr.min.js' %}"></script>
-
-{% endblock %}
-
 {% block content %}
 {% load widget_tweaks %}
 <!-- {% load crispy_forms_tags %} -->
@@ -29,7 +15,7 @@
                     {{ form|crispy }}
                     
                     <p class="mt-2">
-                        <a href="{% url 'job-history-list' %}">
+                        <a href="{% url 'leave-type-list' %}">
                             <button type="button" class="btn btn-danger rounded-pill waves-effect waves-light m-1"><i class="fe-x me-1"></i> Cancel</button>               
                         </a>
                         <button type="submit" class="btn btn-success rounded-pill waves-effect waves-light m-1"><i class="fe-check-circle me-1"></i> Save Record</button>
@@ -40,18 +26,5 @@
         </div>
     </div>
 </div>
-
-{% endblock %}
-
-{% block javascript %}
-<script>
-    $('document').ready(function(){
-
-        $('.select').select2();
-        $('.dateinput').flatpickr({ altInput: !0, altFormat: "F j, Y", dateFormat: "Y-m-d" });
-
-
-    });
-</script> 
 
 {% endblock %}
