--- a/hr/templates/hr/employee/employee_form.html
+++ b/hr/templates/hr/employee/employee_form.html
@@ -5,6 +5,7 @@
 <link href="{% static 'plugin/libs/select2/css/select2.min.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'plugin/libs/flatpickr/flatpickr.min.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'css/select2.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'plugin/libs/multiselect/css/multi-select.css' %}" rel="stylesheet" type="text/css" />
 
 {% endblock %}
 
@@ -12,6 +13,8 @@
 <script src="{% static 'plugin/libs/select2/js/select2.min.js' %}"></script>
 <script src="{% static 'plugin/libs/sweetalert2/sweetalert2.min2.js' %}"></script>
 <script src="{% static 'plugin/libs/flatpickr/flatpickr.min.js' %}"></script>
+<script src="{% static 'plugin/libs/multiselect/js/jquery.multi-select.js' %}"></script>
+
 {% endblock %}
 
 {% block content %}
@@ -61,6 +64,25 @@
                             </div>
                             <div class="form-group">
                                 {{ form.tin|as_crispy_field }}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12 mb-3">
+                            <div class="form-group">
+                                <label for="{{ form.skills.id_for_label }}">{{ form.skills.label }}</label>
+                                <select class="form-control select2-multiple" data-toggle="select2" multiple="multiple" id="{{ form.skills.id_for_label }}" name="{{ form.skills.name }}" data-placeholder="Choose skills...">
+                                    {% for category, skills in categorized_skills.items %}
+                                    <optgroup label="{{ category|title }}">
+                                        {% for skill in skills %}
+                                        <option value="{{ skill.id }}" {% if skill.id in form.skills.value %}selected{% endif %}>
+                                            {{ skill.name }}
+                                        </option>
+                                        {% endfor %}
+                                    </optgroup>
+                                    {% endfor %}
+                                </select>
                             </div>
                         </div>
                     </div>
@@ -136,6 +158,8 @@
 {% block javascript %}
 <script>
     $('document').ready(function(){
+        $('[data-toggle="select2"]').select2()
+
         $('.select').select2();
         $('.dateinput').flatpickr({ altInput: true, altFormat: "F j, Y", dateFormat: "Y-m-d" });
 
