tax setup functionality done

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -2273,7 +2273,7 @@
     {% block modal %} {% endblock modal %} {% block scripts %} {% endblock %}
 
     <!-- Dashboar 1 init js-->
-    <script src="{% static 'js/pages/dashboard-1.init.js' %}"></script>
+    {% comment %} <script src="{% static 'js/pages/dashboard-1.init.js' %}"></script> {% endcomment %}
     {% block script %} {% endblock %} {% block javascript %} {% endblock %}
   </body>
 </html>
