--- a/core/templates/core/menu/sidebar.html
+++ b/core/templates/core/menu/sidebar.html
@@ -154,6 +154,12 @@
                       <span class="menu-text">Grades</span>
                     </a>               
                   </li>
+                  <li class="menu-item">
+                    <a href="{% url 'setup-tax' %}" class="menu-link">
+                      <span class="menu-text">Setup Tax</span>
+                    </a>               
+                  </li>
+
                 </ul>
               </div>
             </li>
